--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,6 @@ charset = utf-8
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{cpp,h,hpp,c}]
+[*.{cpp,h,hpp,c,mm}]
 indent_style = space
 indent_size = 4
